--- a/praca/index.html
+++ b/praca/index.html
@@ -8,7 +8,7 @@
 </head>
 <header>
     <div class="logo"></div>
-        <button class="button">Przycisk</button>
+        <button class="button">Strona główna</button>
 </header>
 <body>
 
