--- a/praca/index.html
+++ b/praca/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <header>
-
-
+    <img src="./images/icon.png" width="75px" height="75px"></img>
 </header>
 <body>
 
