footer+css footer
ogarniety jest stopka dalem przykladowy tekst

--- a/praca/index.html
+++ b/praca/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +11,76 @@
 </header>
 <body>
 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 </body>
+<footer>
+    <div class="footer-segment">
+        <div class="footer-subsegment">
+<img src="./images/icon.png" width="75px" height="75px"></img>
+        </div>
+        <div class="footer-subsegment">
+<h3>RESORT SERVICE zapewnia usługi z zakresu rekrutacji jednorazowej pracowników z Polski, Ukrainy, Białorusi, Gruzji, Mołdawii i krajów azjatyckich.
+</h3>
+        </div>
+    </div>
+    <div class="footer-segment">
+<h3>Gdzie się znajdujemy
+
+RESORT SERVICE Sp. z o.o.
+<br>
+NIP: 7722430446
+<br>                            <!-- ogarnieta stopka!!!!!!!!!!!!!!!!!!! -->
+REGON: 523967757
+<br>
+KRS: 0001009235
+<br>                            <!-- formatowanie do zrobienia padding center i display center  -->
+Rolna 8, 97-500 Radomsko
+</h3>                           <!-- dane w stopce uzyte z resortservice nie sa takie jak powinny byc ale jest to przyklad -->
+    </div>
+    <div class="footer-segment">
+<h3>
+            Kontakt z nami
+<br>
+kontakt@resortservice.pl
+<br>
++48 534 901 665</h3>
+    </div>
+</footer> 
 </html>
