--- a/praca/index.html
+++ b/praca/index.html
@@ -10,45 +10,8 @@
 <img src="./images/icon.png" width="75px" height="75px"></img>
 </header>
 <body>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
+    <section class="blok">
+    </section>
 </body>
 <footer>
     <div class="footer-segment">
@@ -56,7 +19,8 @@
 <img src="./images/icon.png" width="75px" height="75px"></img>
         </div>
         <div class="footer-subsegment">
-<h3>RESORT SERVICE zapewnia usługi z zakresu rekrutacji jednorazowej pracowników z Polski, Ukrainy, Białorusi, Gruzji, Mołdawii i krajów azjatyckich.
+<h3>RESORT SERVICE zapewnia usługi z zakresu rekrutacji jednorazowej <br>
+     pracowników z Polski, Ukrainy, Białorusi, Gruzji, Mołdawii i krajów azjatyckich.
 </h3>
         </div>
     </div>
