--- a/praca/index.html
+++ b/praca/index.html
@@ -10,8 +10,8 @@
 <img src="./images/icon.png" width="75px" height="75px"></img>
 </header>
 <body>
-    <section class="blok">
-    </section>
+    <div class="blok">
+    </div>
 </body>
 <footer>
     <div class="footer-segment">
