--- a/praca/index.html
+++ b/praca/index.html
@@ -7,16 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <header>
-<img src="./images/icon.png" width="75px" height="75px"></img>
+<img src="./images/logo_1440p_transparent (1).png" width="75px" height="75px"></img>
 </header>
 <body>
     <div class="blok">
+        
     </div>
 </body>
 <footer>
     <div class="footer-segment">
         <div class="footer-subsegment">
-<img src="./images/icon.png" width="75px" height="75px"></img>
+<img src="./images/logo_1440p_transparent (1).png" width="75px" height="75px"></img>
         </div>
         <div class="footer-subsegment">
 <h3>RESORT SERVICE zapewnia usługi z zakresu rekrutacji jednorazowej <br>
