--- a/praca/index.html
+++ b/praca/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <header>
-<img src="./images/logo_1440p_transparent (1).png" width="75px" height="75px"></img>
+<img src="./images/logo_1440p_transparent (1).png" width="800px" height="300"></img>
 </header>
 <body>
     <div class="blok">
@@ -17,7 +17,7 @@
 <footer>
     <div class="footer-segment">
         <div class="footer-subsegment">
-<img src="./images/logo_1440p_transparent (1).png" width="75px" height="75px"></img>
+<img src="./images/logo_1440p_transparent (1).png" width="600px" height="200"></img>
         </div>
         <div class="footer-subsegment">
 <h3>RESORT SERVICE zapewnia usługi z zakresu rekrutacji jednorazowej <br>
