--- a/praca/index.html
+++ b/praca/index.html
@@ -26,7 +26,7 @@
         </div>
     </div>
     <div class="footer-segment">
-<h3>Gdzie się znajdujemy
+<h3><br>Gdzie się znajdujemy
 
 RESORT SERVICE Sp. z o.o.
 <br>
@@ -41,7 +41,7 @@ Rolna 8, 97-500 Radomsko
     </div>
     <div class="footer-segment">
 <h3>
-            Kontakt z nami
+            <br>Kontakt z nami
 <br>
 kontakt@resortservice.pl
 <br>
