--- a/praca/index.html
+++ b/praca/index.html
@@ -28,24 +28,24 @@
     <div class="footer-segment">
 <h3><br>Gdzie się znajdujemy
 
-RESORT SERVICE Sp. z o.o.
+GLOBAL INTERNATIONAL GROUP Sp. z o.o.
 <br>
-NIP: 7722430446
+NIP: 8883144054
 <br>                            <!-- ogarnieta stopka!!!!!!!!!!!!!!!!!!! -->
-REGON: 523967757
+REGON: 385357778
 <br>
-KRS: 0001009235
+KRS: 0000824812
 <br>                            <!-- formatowanie do zrobienia padding center i display center  -->
 Rolna 8, 97-500 Radomsko
 </h3>                           <!-- dane w stopce uzyte z resortservice nie sa takie jak powinny byc ale jest to przyklad -->
     </div>
     <div class="footer-segment">
 <h3>
-            <br>Kontakt z nami
+<br>Kontakt z nami
 <br>
-kontakt@resortservice.pl
+kontakt@GIG.pl
 <br>
-+48 534 901 665</h3>
++48 do zmiany</h3>
     </div>
 </footer> 
 </html>
