--- a/praca/kupuje.html
+++ b/praca/kupuje.html
@@ -10,7 +10,7 @@
     <div class="button-container">
         <a href="sprzedaje.html" class="button">SPRZEDAJE</a>
         <a href="kupuje.html" class="button">KUPUJE</a>
-        <a href="obrazki.html" class="button">
+        <a href="index.html" class="button">
             <img src="./images/logo_1440p_transparent (1).png" width="60px" height="60px">
         </a>
     </div>
