--- a/praca/kupuje.html
+++ b/praca/kupuje.html
@@ -7,13 +7,18 @@
     <link rel="stylesheet" href="kupuje.css">
 </head>
 <header>
-    <div class="button-container">
-        <a href="sprzedaje.html" class="button">SPRZEDAJE</a>
-        <a href="kupuje.html" class="button">KUPUJE</a>
-        <a href="index.html" class="button">
-            <img src="./images/logo_1440p_transparent (1).png" width="60px" height="60px">
+
+    <a href="sprzedaje.html" class="button">SPRZEDAJE</a>
+
+    <div>
+        <a href="index.html" class="button-center">
+            <img src="./images/logo_1440p_transparent (1).png" width="800px" height="300">
         </a>
-    </div>
+        </div>
+
+    <a href="kupuje.html" class="button">KUPUJE</a>
+
+   
 </header>
 <body>
     <div class="blok">
