--- a/praca/kupuje.html
+++ b/praca/kupuje.html
@@ -8,7 +8,7 @@
 </head>
 <header>
 
-    <a href="sprzedaje.html" class="button">SPRZEDAJE</a>
+    <a href="sprzedaje.html" class="button1">SPRZEDAJĘ</a>
 
     <div>
         <a href="index.html" class="button-center">
@@ -16,7 +16,7 @@
         </a>
         </div>
 
-    <a href="kupuje.html" class="button">KUPUJE</a>
+    <a href="kupuje.html" class="button2">KUPUJĘ</a>
 
    
 </header>
