--- a/praca/kupuje.html
+++ b/praca/kupuje.html
@@ -21,8 +21,10 @@
    
 </header>
 <body>
-    <div class="blok">
-        
+    <div class="banner">
+        <div class="blok">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, tempora necessitatibus veritatis mollitia magnam perferendis officiis commodi ad adipisci error asperiores facere dolores neque non expedita laudantium velit quae magni!
+        </div>
     </div>
 </body>
 <footer>
