--- a/praca/index.html
+++ b/praca/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <header>
-<img src="./images/logo_1440p_transparent (1).png" width="800px" height="300"></img>
+<img src="./images/logo_1440p_transparent (1).png" width="250px" height="80" class="img"></img>
 </header>
 <body>
     <div class="blok">
