--- a/praca/index.html
+++ b/praca/index.html
@@ -25,13 +25,13 @@
             
             
                 </table>-->
-                <button href="sprzedaje.html" class="button-left">
+                <a href="sprzedaje.html" class="button-left">
                     Sprzedaję
-                </button>
+                </a>
 
-                <button href="sprzedaje.html" class="button-right">
+                <a href="sprzedaje.html" class="button-right">
                     Kupuję
-                </button>
+                </a>
     </div>
 </div>
 </body>
