--- a/praca/sprzedaje.html
+++ b/praca/sprzedaje.html
@@ -34,7 +34,7 @@
 </h3>
         </div>
     </div>
-    <div class="footer-segment">
+    <div class="footer-segmentmid">
 <h3><br>Gdzie się znajdujemy
 
 GLOBAL INTERNATIONAL GROUP Sp. z o.o.
