--- a/praca/kupuje.html
+++ b/praca/kupuje.html
@@ -14,7 +14,7 @@
     <ul>
         <li></li>
         <li>
-          <a href="#">Menu ▾</a>
+          <a><img src="./images/dropdown.png" width="20px" height="20px"></a>
           <ul class="dropdown">
            <li><a href="sprzedaje.html" class="button1">SPRZEDAJĘ</a></li>
            <li><a href="kupuje.html" class="button2">KUPUJĘ</a></li>
