--- a/praca/index.html
+++ b/praca/index.html
@@ -15,12 +15,18 @@
                 <a href="sprzedaje.html" class="button-left">
                     Sprzedaję
                 </a>
-
+                    <di>
+                        <h1 class="custom-h1">
+                            Global International Group sp. z o.o. to Twój zaufany partner w świecie nieruchomości. Specjalizujemy się w doradztwie, pośrednictwie w sprzedaży i zakupie nieruchomości, oferując również komfortowe miejsca noclegowe w naszych dwóch hostelach w Radomsku. Dzięki wieloletniemu doświadczeniu i głębokiej znajomości rynku, zapewniamy profesjonalne wsparcie na każdym etapie transakcji. Odwiedź nas w biurze przy ul. Rolna 8, 97-500 Radomsko, aby dowiedzieć się więcej o tym, jak możemy Ci pomóc.
+                        </h1>
+                    </di>
                 <a href="sprzedaje.html" class="button-right">
                     Kupuję
                 </a>
+        </div>
+            
     </div>
-</div>
+
 </body>
 
 <footer>
