--- a/praca/kupuje.html
+++ b/praca/kupuje.html
@@ -13,7 +13,7 @@
         </a>
 
  <div class="dropdown">
-    <span><a><img src="./images/dropdown.png" width="30px" height="30px" class="imgrot"></a></span>
+    <span><a><img src="./images/dropdown.png" width="30px" height="30px"></a></span>
     <div class="dropdown-content">
         <a href="sprzedaje.html" class="button1">SPRZEDAJĘ</a>
     </div>
