--- a/praca/hostel.html
+++ b/praca/hostel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="kupuje.css">
+    <link rel="stylesheet" href="hostel.css">
 </head>
 
 <body>
@@ -12,18 +12,18 @@
             <img src="./images/logo_1440p_transparent (1).png" width="250px" height="80">
         </a>
 
-        <div class="dropdown">
-            <span><a><img src="./images/dropdown_place2.png" width="30px" height="30px"></a></span>
-            <div class="dropdown-content">
-                <a href="sprzedaje.html" class="button1">SPRZEDAJĘ</a>
-            </div>
-                <div class="dropdown-content">
-                <a href="kupuje.html" class="button2">KUPUJĘ</a>
-            </div>
-                <div class="dropdown-content">
-                <a href="hostel.html" class="button3">HOSTELE</a>
-            </div>
-        </div>
+ <div class="dropdown">
+    <span><a><img src="./images/dropdown_place3.png" width="30px" height="30px"></a></span>
+    <div class="dropdown-content">
+        <a href="sprzedaje.html" class="button1">SPRZEDAJĘ</a>
+    </div>
+        <div class="dropdown-content">
+        <a href="kupuje.html" class="button2">KUPUJĘ</a>
+    </div>
+        <div class="dropdown-content">
+        <a href="hostel.html" class="button3">HOSTELE</a>
+    </div>
+</div>
 
     
     <div class="banner">
