--- a/praca/sprzedaje.html
+++ b/praca/sprzedaje.html
@@ -12,15 +12,18 @@
             <img src="./images/logo_1440p_transparent (1).png" width="250px" height="80">
         </a>
 
- <div class="dropdown">
-    <span><a><img src="./images/dropdown_place1.png" width="30px" height="30px"></a></span>
-    <div class="dropdown-content">
-        <a href="sprzedaje.html" class="button1">SPRZEDAJĘ</a>
-    </div>
-        <div class="dropdown-content">
-        <a href="kupuje.html" class="button2">KUPUJĘ</a>
-    </div>
-</div>
+        <div class="dropdown">
+            <span><a><img src="./images/dropdown_place1.png" width="30px" height="30px"></a></span>
+            <div class="dropdown-content">
+                <a href="sprzedaje.html" class="button1">SPRZEDAJĘ</a>
+            </div>
+                <div class="dropdown-content">
+                <a href="kupuje.html" class="button2">KUPUJĘ</a>
+            </div>
+                <div class="dropdown-content">
+                <a href="hostel.html" class="button3">HOSTELE</a>
+            </div>
+        </div>
 
     
     <div class="banner">
