--- a/praca/index.html
+++ b/praca/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,19 +13,31 @@
     <div class="banner">
         <img src="./images/logo_1440p_transparent (1).png" width="250px" height="80" class="img"></img>
         <div class="blok">
-                <a href="sprzedaje.html" class="button-left">
-                    Sprzedaję
-                </a>
-                    <di>
-                        <h1 class="custom-h1">
-                            Global International Group sp. z o.o. to Twój zaufany partner w świecie nieruchomości. Specjalizujemy się w doradztwie, pośrednictwie w sprzedaży i zakupie nieruchomości, oferując również komfortowe miejsca noclegowe w naszych dwóch hostelach w Radomsku. Dzięki wieloletniemu doświadczeniu i głębokiej znajomości rynku, zapewniamy profesjonalne wsparcie na każdym etapie transakcji. Odwiedź nas w biurze przy ul. Rolna 8, 97-500 Radomsko, aby dowiedzieć się więcej o tym, jak możemy Ci pomóc.
-                        </h1>
-                    </di>
-                <a href="sprzedaje.html" class="button-right">
-                    Kupuję
-                </a>
+            <a href="sprzedaje.html" class="button-left">
+                Sprzedaję
+            </a>
+            <div>
+                <h1 class="custom-h1">
+                    Global International Group sp. z o.o. to Twój zaufany partner w świecie nieruchomości.
+                    Specjalizujemy się w doradztwie, pośrednictwie w sprzedaży i zakupie nieruchomości, oferując również
+                    komfortowe miejsca noclegowe w naszych dwóch hostelach w Radomsku. Dzięki wieloletniemu
+                    doświadczeniu i głębokiej znajomości rynku, zapewniamy profesjonalne wsparcie na każdym etapie
+                    transakcji. Odwiedź nas w biurze przy ul. Rolna 8, 97-500 Radomsko, aby dowiedzieć się więcej o tym,
+                    jak możemy Ci pomóc.
+                </h1>
+            </div>
+
+
+            <a href="hostel.html" class="button-center">
+                Hostele
+            </a>
+            <a href="sprzedaje.html" class="button-right">
+                Kupuję
+            </a>
+
+
         </div>
-            
+
     </div>
 
 </body>
@@ -32,35 +45,37 @@
 <footer>
     <div class="footer-segment">
         <div class="footer-subsegment">
-<img src="./images/logo_1440p_transparent (1).png" width="200px" height="60px"></img>
+            <img src="./images/logo_1440p_transparent (1).png" width="200px" height="60px"></img>
         </div>
         <div class="footer-subsegment">
-<h3>RESORT SERVICE zapewnia usługi z zakresu rekrutacji jednorazowej <br>
-     pracowników z Polski, Ukrainy, Białorusi, Gruzji, Mołdawii i krajów azjatyckich.
-</h3>
+            <h3>RESORT SERVICE zapewnia usługi z zakresu rekrutacji jednorazowej <br>
+                pracowników z Polski, Ukrainy, Białorusi, Gruzji, Mołdawii i krajów azjatyckich.
+            </h3>
         </div>
     </div>
     <div class="footer-segment">
-<h3><br>Gdzie się znajdujemy
+        <h3><br>Gdzie się znajdujemy
 
-GLOBAL INTERNATIONAL GROUP Sp. z o.o.
-<br>
-NIP: 8883144054
-<br>                            <!-- ogarnieta stopka!!!!!!!!!!!!!!!!!!! -->
-REGON: 385357778
-<br>
-KRS: 0000824812
-<br>                            <!-- formatowanie do zrobienia padding center i display center  -->
-Rolna 8, 97-500 Radomsko
-</h3>                           <!-- dane w stopce uzyte z resortservice nie sa takie jak powinny byc ale jest to przyklad -->
+            GLOBAL INTERNATIONAL GROUP Sp. z o.o.
+            <br>
+            NIP: 8883144054
+            <br> <!-- ogarnieta stopka!!!!!!!!!!!!!!!!!!! -->
+            REGON: 385357778
+            <br>
+            KRS: 0000824812
+            <br> <!-- formatowanie do zrobienia padding center i display center  -->
+            Rolna 8, 97-500 Radomsko
+        </h3> <!-- dane w stopce uzyte z resortservice nie sa takie jak powinny byc ale jest to przyklad -->
     </div>
     <div class="footer-segment">
-<h3>
-<br>Kontakt z nami
-<br>
-kontakt@GIG.pl
-<br>
-+48 do zmiany</h3>
+        <h3>
+            <br>Kontakt z nami
+            <br>
+            kontakt@GIG.pl
+            <br>
+            +48 do zmiany
+        </h3>
     </div>
-</footer> 
+</footer>
+
 </html>
