--- a/praca/kupuje.html
+++ b/praca/kupuje.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,62 +9,66 @@
 </head>
 
 <body>
-<a href="index.html" class="button-center">
-            <img src="./images/logo_1440p_transparent (1).png" width="250px" height="80">
-        </a>
+    <a href="index.html" class="button-center">
+        <img src="./images/logo_1440p_transparent (1).png" width="250px" height="80">
+    </a>
 
-        <div class="dropdown">
-            <span><a><img src="./images/dropdown_place2.png" width="30px" height="30px"></a></span>
-            <div class="dropdown-content">
-                <a href="sprzedaje.html" class="button1">SPRZEDAJĘ</a>
-            </div>
-                <div class="dropdown-content">
-                <a href="kupuje.html" class="button2">KUPUJĘ</a>
-            </div>
-                <div class="dropdown-content">
-                <a href="hostel.html" class="button3">HOSTELE</a>
-            </div>
+    <div class="dropdown">
+        <span><a><img src="./images/dropdown_place2.png" width="30px" height="30px"></a></span>
+        <div class="dropdown-content">
+            <a href="sprzedaje.html" class="button1">SPRZEDAJĘ</a>
         </div>
+        <div class="dropdown-content">
+            <a href="kupuje.html" class="button2">KUPUJĘ</a>
+        </div>
+        <div class="dropdown-content">
+            <a href="hostel.html" class="button3">HOSTELE</a>
+        </div>
+    </div>
 
-    
+
     <div class="banner">
         <div class="blok">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, tempora necessitatibus veritatis mollitia magnam perferendis officiis commodi ad adipisci error asperiores facere dolores neque non expedita laudantium velit quae magni!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, tempora necessitatibus veritatis mollitia
+            magnam perferendis officiis commodi ad adipisci error asperiores facere dolores neque non expedita
+            laudantium velit quae magni!
         </div>
     </div>
 </body>
 <footer>
     <div class="footer-segment">
         <div class="footer-subsegment">
-<img src="./images/logo_1440p_transparent (1).png" width="200px" height="60px"></img>
+            <img src="./images/logo_1440p_transparent (1).png" width="200px" height="60px"></img>
         </div>
         <div class="footer-subsegment">
-<h3>RESORT SERVICE zapewnia usługi z zakresu rekrutacji jednorazowej <br>
-     pracowników z Polski, Ukrainy, Białorusi, Gruzji, Mołdawii i krajów azjatyckich.
-</h3>
+            <h3>RESORT SERVICE zapewnia usługi z zakresu rekrutacji jednorazowej <br>
+                pracowników z Polski, Ukrainy, Białorusi, Gruzji, Mołdawii i krajów azjatyckich.
+            </h3>
         </div>
     </div>
     <div class="footer-segmentmid">
-<h3><br>Gdzie się znajdujemy
+        <h3><br>Gdzie się znajdujemy
 
-GLOBAL INTERNATIONAL GROUP Sp. z o.o.
-<br>
-NIP: 8883144054
-<br>                            <!-- ogarnieta stopka!!!!!!!!!!!!!!!!!!! -->
-REGON: 385357778
-<br>
-KRS: 0000824812
-<br>                            <!-- formatowanie do zrobienia padding center i display center  -->
-Rolna 8, 97-500 Radomsko
-</h3>                           <!-- dane w stopce uzyte z resortservice nie sa takie jak powinny byc ale jest to przyklad -->
+            GLOBAL INTERNATIONAL GROUP Sp. z o.o.
+            <br>
+            NIP: 8883144054
+            <br> <!-- ogarnieta stopka!!!!!!!!!!!!!!!!!!! -->
+            REGON: 385357778
+            <br>
+            KRS: 0000824812
+            <br> <!-- formatowanie do zrobienia padding center i display center  -->
+            Rolna 8, 97-500 Radomsko
+        </h3> <!-- dane w stopce uzyte z resortservice nie sa takie jak powinny byc ale jest to przyklad -->
     </div>
     <div class="footer-segment">
-<h3>
-<br>Kontakt z nami
-<br>
-kontakt@GIG.pl
-<br>
-+48 do zmiany</h3>
+        <h3>
+            <br>Kontakt z nami
+            <br>
+            kontakt@GIG.pl
+            <br>
+            +48 do zmiany
+        </h3>
     </div>
-</footer> 
+</footer>
+
 </html>
