--- a/praca/index.html
+++ b/praca/index.html
@@ -27,13 +27,14 @@
                 </h1>
             </div>
 
-
-            <a href="hostel.html" class="button-center">
-                Hostele
-            </a>
-            <a href="sprzedaje.html" class="button-right">
+            <a href="sprzedaje.html" class="button-center">
                 Kupuję
             </a>
+
+            <a href="hostel.html" class="button-right">
+                Hostele
+            </a>
+
 
 
         </div>
