--- a/praca/index.html
+++ b/praca/index.html
@@ -27,7 +27,7 @@
                 </h1>
             </div>
 
-            <a href="sprzedaje.html" class="button-center">
+            <a href="kupuje.html" class="button-center">
                 Kupuję
             </a>
 
