--- a/praca/hostel.html
+++ b/praca/hostel.html
@@ -29,9 +29,13 @@
 
     <div class="banner">
         <div class="blok">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, tempora necessitatibus veritatis mollitia
-            magnam perferendis officiis commodi ad adipisci error asperiores facere dolores neque non expedita
-            laudantium velit quae magni!
+           <p>
+            Komfortowe i przystępne cenowo noclegi w Radomsku.
+            <br>
+            Szukasz wygodnego miejsca na nocleg w Radomsku? Global International Group oferuje komfortowe pokoje w dwóch hostelach, zlokalizowanych przy ul. Zachodnia 12 oraz ul. Piłsudskiego 109. Nasze hostele to idealne rozwiązanie dla pracowników w delegacji na krótki jak i długi pobyt. Oferujemy atrakcyjne ceny: od 25 zł za dobę lub 750 zł za miesiąc pobytu. Każdy z naszych hosteli zapewnia przyjazną atmosferę i wszystkie niezbędne udogodnienia, aby Twój pobyt był jak najbardziej komfortowy.
+                  
+           </p>
+        
         </div>
     </div>
 </body>
