--- a/praca/index.html
+++ b/praca/index.html
@@ -13,32 +13,20 @@
     <div class="banner">
         <img src="./images/logo_1440p_transparent (1).png" width="250px" height="80" class="img"></img>
         <div class="blok">
-            <a href="sprzedaje.html" class="button-left">
-                Sprzedaję
-            </a>
-            <div>
+            <div class="text-container">
                 <h1 class="custom-h1">
-                    Global International Group sp. z o.o. to Twój zaufany partner w świecie nieruchomości.
-                    Specjalizujemy się w doradztwie, pośrednictwie w sprzedaży i zakupie nieruchomości, oferując również
-                    komfortowe miejsca noclegowe w naszych dwóch hostelach w Radomsku. Dzięki wieloletniemu
-                    doświadczeniu i głębokiej znajomości rynku, zapewniamy profesjonalne wsparcie na każdym etapie
-                    transakcji. Odwiedź nas w biurze przy ul. Rolna 8, 97-500 Radomsko, aby dowiedzieć się więcej o tym,
-                    jak możemy Ci pomóc.
+                    Global International Group sp. z o.o. to Twój zaufany partner w świecie nieruchomości. Specjalizujemy się w doradztwie, pośrednictwie w sprzedaży i zakupie nieruchomości, oferując również komfortowe miejsca noclegowe w naszych dwóch hostelach w Radomsku. Dzięki wieloletniemu doświadczeniu i głębokiej znajomości rynku, zapewniamy profesjonalne wsparcie na każdym etapie transakcji. Odwiedź nas w biurze przy ul. Rolna 8, 97-500 Radomsko, aby dowiedzieć się więcej o tym, jak możemy Ci pomóc.                    <!-- Reszta tekstu -->
                 </h1>
             </div>
-
-            <a href="kupuje.html" class="button-center">
-                Kupuję
-            </a>
-
-            <a href="hostel.html" class="button-right">
-                Hostele
-            </a>
-
-
-
+            <div class="buttons-container">
+                <a href="sprzedaje.html" class="button-left">Sprzedaję</a>
+                <a href="kupuje.html" class="button-center">Kupuję</a>
+            </div>
+            <div class="button-bottom-container">
+                <a href="hostel.html" class="button-right">Hostele</a>
+            </div>
         </div>
-
+        
     </div>
 
 </body>
