--- a/praca/kupuje.html
+++ b/praca/kupuje.html
@@ -16,6 +16,9 @@
     <div class="dropdown">
         <span><a><img src="./images/dropdown_place2.png" width="30px" height="30px"></a></span>
         <div class="dropdown-content">
+            <a href="index.html" class="button3">STRONA GŁÓWNA</a>
+        </div>
+        <div class="dropdown-content">
             <a href="sprzedaje.html" class="button1">SPRZEDAJĘ</a>
         </div>
         <div class="dropdown-content">
@@ -29,9 +32,12 @@
 
     <div class="banner">
         <div class="blok">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, tempora necessitatibus veritatis mollitia
-            magnam perferendis officiis commodi ad adipisci error asperiores facere dolores neque non expedita
-            laudantium velit quae magni!
+            <p>
+                Znajdź wymarzoną nieruchomość z Global International Group sp. z o.o.
+                <br>
+                Szukasz idealnego miejsca do życia lub inwestycji? Nasi eksperci z Global International Group pomogą Ci znaleźć nieruchomość, która spełni wszystkie Twoje oczekiwania. Oferujemy szeroką gamę nieruchomości na sprzedaż, zapewniając profesjonalne doradztwo i wsparcie na każdym kroku. Nasz zespół nie tylko pomoże Ci znaleźć idealną nieruchomość, ale także przeprowadzi przez cały proces zakupu - od negocjacji ceny, przez formalności prawne, aż po otrzymanie kluczy do nowego domu. Zaufaj profesjonalistom i zrealizuj swoje marzenia o własnym domu z Global International Group.
+            </p>
+        
         </div>
     </div>
 </body>
