--- a/praca/sprzedaje.html
+++ b/praca/sprzedaje.html
@@ -29,11 +29,13 @@
 
     <div class="banner">
         <div class="blok">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, tempora necessitatibus veritatis mollitia
-            magnam perferendis officiis commodi ad adipisci error asperiores facere dolores neque non expedita
-            laudantium velit quae magni!
+        <p>
+            Sprzedaj nieruchomość z Global International Group sp. z o.o.
+            <br>
+            Planujesz sprzedaż nieruchomości? Nasza firma oferuje kompleksową obsługę procesu sprzedaży - od wyceny, przez marketing, aż po finalizację transakcji. Z nami sprzedaż jest szybsza, bezpieczna i zawsze na korzystnych warunkach. Skontaktuj się z nami, aby skorzystać z indywidualnej konsultacji i otrzymać ofertę dopasowaną do Twoich potrzeb.        </div>
+        </p>   
+        
         </div>
-    </div>
 </body>
 <footer>
     <div class="footer-segment">
