--- a/praca/hostel.html
+++ b/praca/hostel.html
@@ -16,6 +16,9 @@
     <div class="dropdown">
         <span><a><img src="./images/dropdown_place3.png" width="30px" height="30px"></a></span>
         <div class="dropdown-content">
+            <a href="index.html" class="button3">STRONA GŁÓWNA</a>
+        </div>
+        <div class="dropdown-content">
             <a href="sprzedaje.html" class="button1">SPRZEDAJĘ</a>
         </div>
         <div class="dropdown-content">
@@ -29,12 +32,12 @@
 
     <div class="banner">
         <div class="blok">
-           <p>
-            Komfortowe i przystępne cenowo noclegi w Radomsku.
+            <h1 class="custom-h1">
+                Komfortowe i przystępne cenowo noclegi w Radomsku.
             <br>
             Szukasz wygodnego miejsca na nocleg w Radomsku? Global International Group oferuje komfortowe pokoje w dwóch hostelach, zlokalizowanych przy ul. Zachodnia 12 oraz ul. Piłsudskiego 109. Nasze hostele to idealne rozwiązanie dla pracowników w delegacji na krótki jak i długi pobyt. Oferujemy atrakcyjne ceny: od 25 zł za dobę lub 750 zł za miesiąc pobytu. Każdy z naszych hosteli zapewnia przyjazną atmosferę i wszystkie niezbędne udogodnienia, aby Twój pobyt był jak najbardziej komfortowy.
                   
-           </p>
+            </h1>
         
         </div>
     </div>
