--- a/praca/kupuje.html
+++ b/praca/kupuje.html
@@ -32,12 +32,11 @@
 
     <div class="banner">
         <div class="blok">
-            <p>
+            <h1 class="custom-h1">
                 Znajdź wymarzoną nieruchomość z Global International Group sp. z o.o.
                 <br>
                 Szukasz idealnego miejsca do życia lub inwestycji? Nasi eksperci z Global International Group pomogą Ci znaleźć nieruchomość, która spełni wszystkie Twoje oczekiwania. Oferujemy szeroką gamę nieruchomości na sprzedaż, zapewniając profesjonalne doradztwo i wsparcie na każdym kroku. Nasz zespół nie tylko pomoże Ci znaleźć idealną nieruchomość, ale także przeprowadzi przez cały proces zakupu - od negocjacji ceny, przez formalności prawne, aż po otrzymanie kluczy do nowego domu. Zaufaj profesjonalistom i zrealizuj swoje marzenia o własnym domu z Global International Group.
-            </p>
-        
+            </h1>        
         </div>
     </div>
 </body>
