--- a/praca/sprzedaje.html
+++ b/praca/sprzedaje.html
@@ -16,6 +16,9 @@
     <div class="dropdown">
         <span><a><img src="./images/dropdown_place1.png" width="30px" height="30px"></a></span>
         <div class="dropdown-content">
+            <a href="index.html" class="button3">STRONA GŁÓWNA</a>
+        </div>
+        <div class="dropdown-content">
             <a href="sprzedaje.html" class="button1">SPRZEDAJĘ</a>
         </div>
         <div class="dropdown-content">
@@ -29,11 +32,11 @@
 
     <div class="banner">
         <div class="blok">
-        <p>
-            Sprzedaj nieruchomość z Global International Group sp. z o.o.
+            <h1 class="custom-h1">
+                Sprzedaj nieruchomość z Global International Group sp. z o.o.
             <br>
             Planujesz sprzedaż nieruchomości? Nasza firma oferuje kompleksową obsługę procesu sprzedaży - od wyceny, przez marketing, aż po finalizację transakcji. Z nami sprzedaż jest szybsza, bezpieczna i zawsze na korzystnych warunkach. Skontaktuj się z nami, aby skorzystać z indywidualnej konsultacji i otrzymać ofertę dopasowaną do Twoich potrzeb.        </div>
-        </p>   
+            </h1>   
         
         </div>
 </body>
