--- a/praca/hostel.html
+++ b/praca/hostel.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>G.I.G HOSTEL</title>
     <link rel="stylesheet" href="hostel.css">
 </head>
 
@@ -76,6 +76,7 @@
             +48 do zmiany
         </h3>
     </div>
+    
 </footer>
 
 </html>
