--- a/praca/kupuje.html
+++ b/praca/kupuje.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>G.I.G BUY</title>
     <link rel="stylesheet" href="kupuje.css">
 </head>
 
