--- a/praca/test.html
+++ b/praca/test.html
@@ -14,6 +14,7 @@
     left: 0;
     bottom: 0;
     width: 100%;
+    height: 400px;
     background-color: #f1f1f1;
     text-align: right;
     padding: 10px 20px; /* Dostosowane marginesy */
@@ -26,7 +27,8 @@
     padding-right: 10%;
   }
   .footer img:hover {
-    transform: scale(1.1); /* Lekkie powiększenie przy najechaniu */
+    transform: scale(1.1);
+    margin-top: 25px; /* Lekkie powiększenie przy najechaniu */
   }
   .tooltip {
     position: absolute;
@@ -37,18 +39,23 @@
     padding: 5px;
     font-size: 12px;
     border-radius: 3px;
-    padding-right: 5%;
+    width: 190px;
+    margin-right: 210px;
   }
 
   .footer img:hover + .tooltip {
     visibility: visible;
+  }
+
+  .image{
+    margin-top: 15px;
   }
 </style>
 </head>
 <body>
 
 <div class="footer">
-  <img src="images/lokalizacja.png" alt="Obrazek-Przycisk" onclick="window.location.href='http://adres_docelowy.pl';">
+  <img class="image"  src="images/lokalizacja.png" alt="Obrazek-Przycisk" onclick="window.location.href='http://adres_docelowy.pl';">
   <div class="tooltip">Tu nas znajdziesz</div>
 </div>
 
