--- a/praca/index.html
+++ b/praca/index.html
@@ -20,10 +20,10 @@
             </div>
             <div class="buttons-container">
                 <a href="sprzedaje.html" class="button-left">Sprzedaję</a>
-                <a href="kupuje.html" class="button-center">Kupuję</a>
+                <a href="kupuje.html" class="button-right">Kupuję</a>
             </div>
             <div class="button-bottom-container">
-                <a href="hostel.html" class="button-right">Hostele</a>
+                <a href="hostel.html" class="button-center">Hostele</a>
             </div>
         </div>
         
