--- a/praca/index.html
+++ b/praca/index.html
@@ -61,6 +61,9 @@
             +48 do zmiany
         </h3>
     </div>
+    <a href="https://www.google.com/maps/place/Rolna+8,+97-500+Radomsko/@51.0673971,19.4506106,17z/data=!4m6!3m5!1s0x47175560052de44b:0x8b2e3d0940a6ca91!8m2!3d51.0674106!4d19.4505891!16s%2Fg%2F11rd3gk5rd?entry=ttu" class="button-1" target="_blank">
+        <img src="images/lokalizacja.png" class="button-1">
+    </a>
 </footer>
 
 </html>
