--- a/praca/test.html
+++ b/praca/test.html
@@ -55,7 +55,7 @@
 <body>
 
 <div class="footer">
-  <img class="image"  src="images/lokalizacja.png" alt="Obrazek-Przycisk" onclick="window.location.href='http://adres_docelowy.pl';">
+  <img class="image"  src="images/lokalizacja.png" alt="Obrazek-Przycisk" onclick="window.location.target href='http://adres_docelowy.pl';">
   <div class="tooltip">Tu nas znajdziesz</div>
 </div>
 
