--- a/praca/index.html
+++ b/praca/index.html
@@ -15,14 +15,19 @@
         <div class="blok">
             <div class="text-container">
                 <h1 class="custom-h1">
-                    Global International Group sp. z o.o. to Twój zaufany partner w świecie nieruchomości. Specjalizujemy się w doradztwie, pośrednictwie w sprzedaży i zakupie nieruchomości, oferując również komfortowe miejsca noclegowe w naszych dwóch hostelach w Radomsku. Dzięki wieloletniemu doświadczeniu i głębokiej znajomości rynku, zapewniamy profesjonalne wsparcie na każdym etapie transakcji. Odwiedź nas w biurze przy ul. Rolna 8, 97-500 Radomsko, aby dowiedzieć się więcej o tym, jak możemy Ci pomóc.                    <!-- Reszta tekstu -->
+                    Global International Group sp. z o.o. to Twój zaufany partner w świecie nieruchomości.
+                    Specjalizujemy się w doradztwie, pośrednictwie w sprzedaży i zakupie nieruchomości, oferując również
+                    komfortowe miejsca noclegowe w naszych dwóch hostelach w Radomsku. Dzięki wieloletniemu
+                    doświadczeniu i głębokiej znajomości rynku, zapewniamy profesjonalne wsparcie na każdym etapie
+                    transakcji. Odwiedź nas w biurze przy ul. Rolna 8, 97-500 Radomsko, aby dowiedzieć się więcej o tym,
+                    jak możemy Ci pomóc. <!-- Reszta tekstu -->
                 </h1>
             </div>
-                <a href="sprzedaje.html" class="button-left">Sprzedaję</a>
-                <a href="kupuje.html" class="button-right">Kupuję</a>
-                <a href="hostel.html" class="button-center">Hostele</a>
+            <a href="sprzedaje.html" class="button-left">Sprzedaję</a>
+            <a href="kupuje.html" class="button-right">Kupuję</a>
+            <a href="hostel.html" class="button-center">Hostele</a>
         </div>
-        
+
     </div>
 
 </body>
@@ -52,6 +57,10 @@
             Rolna 8, 97-500 Radomsko
         </h3> <!-- dane w stopce uzyte z resortservice nie sa takie jak powinny byc ale jest to przyklad -->
     </div>
+    <a href="https://www.google.com/maps/place/Rolna+8,+97-500+Radomsko/@51.0673971,19.4506106,17z/data=!4m6!3m5!1s0x47175560052de44b:0x8b2e3d0940a6ca91!8m2!3d51.0674106!4d19.4505891!16s%2Fg%2F11rd3gk5rd?entry=ttu"
+        class="button-1" target="_blank">
+        <img src="images/lokalizacja.png" class="button-1" alt="Tutaj mamy siedzibe">
+    </a>
     <div class="footer-segment">
         <h3>
             <br>Kontakt z nami
@@ -61,9 +70,7 @@
             +48 do zmiany
         </h3>
     </div>
-    <a href="https://www.google.com/maps/place/Rolna+8,+97-500+Radomsko/@51.0673971,19.4506106,17z/data=!4m6!3m5!1s0x47175560052de44b:0x8b2e3d0940a6ca91!8m2!3d51.0674106!4d19.4505891!16s%2Fg%2F11rd3gk5rd?entry=ttu" class="button-1" target="_blank" >
-        <img src="images/lokalizacja.png" class="button-1" alt="Tutaj mamy siedzibe">
-    </a>
+
 </footer>
 
 </html>
